force-app/main/default/objects/Partner_Info_Change__c/Partner_Info_Change__c.object-meta.xml
<CustomObject>
    <description>Change requests to update Partner Info</description>
    <label>Partner Info Change</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Partner Info Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Info Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>