force-app/main/default/objects/Partner_Info_Change__c/fields/Depot_Bag_Handling__c.field-meta.xml
<CustomField>
    <fullName>Depot_Bag_Handling__c</fullName>
    <label>Depot Bag Handling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>