force-app/main/default/objects/Partner_Info_Change__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility, Facility CMA, Facility CPA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Info Changes (Facility)</relationshipLabel>
    <relationshipName>Partner_Info_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>