force-app/main/default/objects/Partner_Info_Change__c/fields/Facility_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Facility_Equipment__c</fullName>
    <description>Equipment that the outlet owns, but is not charged for</description>
    <inlineHelpText>Equipment that the outlet owns, but is not charged for</inlineHelpText>
    <label>Facility Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>TLCC</fullName>
            </value>
            <value>
                <fullName>Mail Sorting Desk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>