force-app/main/default/objects/Partner_Info_Change__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licence</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Licence, Licence CMA, Licence CPA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Info Changes</relationshipLabel>
    <relationshipName>Partner_Info_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>