force-app/main/default/objects/Partner_Info_Change__c/fields/Licence_Status__c.field-meta.xml
<CustomField>
    <fullName>Licence_Status__c</fullName>
    <label>Licence Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspended Without Fees</fullName>
            </value>
            <value>
                <fullName>Suspended With Fees</fullName>
            </value>
            <value>
                <fullName>Not Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>