force-app/main/default/objects/Partner_Info_Change__c/fields/Network_Manager__c.field-meta.xml
<CustomField>
    <fullName>Network_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Info_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>