force-app/main/default/objects/Partner_Info_Change__c/fields/Not_Activated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Activated_Reason__c</fullName>
    <description>The reason the Licence is being set to Not Activated</description>
    <inlineHelpText>The reason the Licence is being set to Not Activated.  This will be copied to the Not Activated Reason field on the Licence if the PICR is approved.</inlineHelpText>
    <label>Not Activated Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Franchisee declined to proceed</fullName>
            </value>
            <value>
                <fullName>Franchisor - Australia Post declined to proceed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>