force-app/main/default/objects/Partner_Info_Change__c/fields/Private_Delivery_Points_Excess_Rate__c.field-meta.xml
<CustomField>
    <fullName>Private_Delivery_Points_Excess_Rate__c</fullName>
    <description>The agreed rate per delivery point per annum which is paid to a License for the delivery of mail for each private delivery point in excess of 1,000 point</description>
    <label>Private Delivery Points Excess Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>