force-app/main/default/objects/Partner_Info_Change__c/fields/Security_Status__c.field-meta.xml
<CustomField>
    <fullName>Security_Status__c</fullName>
    <description>Security compliance status</description>
    <inlineHelpText>Security compliance status</inlineHelpText>
    <label>Security Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Upgrades Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>