force-app/main/default/objects/Partner_Info_Change__c/fields/Total_Eq_Business_Delivery_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Eq_Business_Delivery_Points__c</fullName>
    <description>The total number of equivalent business delivery points</description>
    <label>Total Eq Business Delivery Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>