force-app/main/default/objects/Partner_Info_Change__c/validationRules/Date_must_be_tomorrow_or_later.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_must_be_tomorrow_or_later</fullName>
    <active>true</active>
    <description>Assignment Effective To Date, Suspend Start or Suspend End Date must be tomorrow or later.</description>
    <errorConditionFormula>OR( Assignment_Effective_To_Date__c &lt;=  TODAY() ,
 Interrupted_Start_Date__c &lt;= TODAY(),
 Interrupted_End_Date__c &lt;= TODAY())</errorConditionFormula>
    <errorMessage>Assignment Effective To Date, Suspend Start or Suspend End Date must be later than today.</errorMessage>
</ValidationRule>