force-app/main/default/objects/Partner_Info_Change__c/validationRules/Equipment_Fee_Exemption_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipment_Fee_Exemption_Checked</fullName>
    <active>true</active>
    <description>When &quot;Equipment Fee Exemption&quot; is checked, &quot;Equipment Fee Exemption Reason Code&quot; must not be null</description>
    <errorConditionFormula>Equipment_Fee_Exemption__c  &amp;&amp;    ISPICKVAL( Equipment_Fee_Exemption_Reason_Code__c , &quot;&quot;)</errorConditionFormula>
    <errorMessage>When &quot;Equipment Fee Exemption&quot; is checked, a &quot;Equipment Fee Exemption Reason Code&quot; must be selected</errorMessage>
</ValidationRule>