force-app/main/default/objects/Partner_Info_Change__c/validationRules/PartnerInfo_PICR_Not_Activated_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerInfo_PICR_Not_Activated_Reason</fullName>
    <active>true</active>
    <description>If the Not Activated Reason is set the Licence Status must also be set to Not Activated</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Not_Activated_Reason__c,&apos;&apos;)),
  NOT(ISPICKVAL(Licence_Status__c, &quot;Not Activated&quot;))
)</errorConditionFormula>
    <errorMessage>To set the Licence to Not Activated, set the Licence Status to &apos;Not Activated&apos; and select a value in the &apos;Not Activated Reason&apos; field.</errorMessage>
</ValidationRule>