force-app/main/default/objects/Partner_Info_Change__c/validationRules/PartnerInfo_Suspend_Start_Date_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerInfo_Suspend_Start_Date_Not_Blank</fullName>
    <active>true</active>
    <description>if Suspend Start Date is specified, then verify that Licence is in Active status</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(Interrupted_Start_Date__c)), 
NOT(ISPICKVAL(Licence__r.Licence_Status__c , &apos;Active&apos;)) 
)</errorConditionFormula>
    <errorMessage>Licence status should be Active before suspending it.</errorMessage>
</ValidationRule>