force-app/main/default/objects/Partner_Info_Change__c/validationRules/Suspend_Type_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Suspend_Type_Is_Mandatory</fullName>
    <active>true</active>
    <description>If Suspend Start date is specified, then Status must be specified.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Interrupted_Start_Date__c )),   ISPICKVAL(Licence_Status__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>Please specify the Licence Status.</errorMessage>
</ValidationRule>