force-app/main/default/objects/Partner_Info_Change__c/validationRules/Termination_Reason_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Reason_must_be_specified</fullName>
    <active>true</active>
    <description>If Assignment Effective To Date is specified, then Termination Reason must be specified.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Assignment_Effective_To_Date__c)),ISPICKVAL( Termination_Reason__c,&apos;&apos;))</errorConditionFormula>
    <errorMessage>Please specify Termination Reason</errorMessage>
</ValidationRule>